Update 'go-crkfzhul' component image to: quay.io/rhtap_qe/go-crkfzhul:585b1e03307051fb7b588c3702dcb20ed2f761bc@sha256:e9c2e43c5f8177f2d81ad3f70aa8bda110467c0a8319e57badbee677d6e0e191

--- a/components/go-crkfzhul/overlays/development/deployment-patch.yaml
+++ b/components/go-crkfzhul/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-crkfzhul
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-crkfzhul:585b1e03307051fb7b588c3702dcb20ed2f761bc@sha256:e9c2e43c5f8177f2d81ad3f70aa8bda110467c0a8319e57badbee677d6e0e191
+          name: container-image
